# railway-yt-dlp-service

./: .coveragerc  .env.example  .env.local  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANNEL_DOWNLOADS_FILES.md  CHANNEL_DOWNLOADS_SUMMARY.txt  COOKIE_MANAGEMENT_IMPLEMENTATION.md  Dockerfile  FIXED_502_ERROR.md  IMPLEMENTATION_COMPLETE.md  LOCAL_TESTING.md  Makefile  RAILWAY_DEPLOYMENT.md  README.md  TESTING_SUMMARY.md  app.py  app_old.py  docker-compose.yml  process.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  run_tests.sh  test_batch_feature.py  test_config.py  test_local.sh  test_railway_storage.py  test_scheduler.py  verify.py  verify_deployment.py
.devcontainer/: .env.example  FIXES_APPLIED.md  QUICKSTART.md  README.md  SETUP_COMPLETE.md  dev-test.sh  devcontainer.json  docker-compose.yml  start-app.sh  verify-setup.py
app/: __init__.py  config.py  main.py
app/core/: __init__.py  exceptions.py  scheduler.py  state.py
app/middleware/: __init__.py  rate_limit.py
app/models/: __init__.py  enums.py  requests.py  responses.py
app/services/: __init__.py  batch_service.py  channel_service.py  cookie_manager.py  file_manager.py  queue_manager.py  webhook_service.py  ytdlp_options.py  ytdlp_wrapper.py
app/utils/: __init__.py  logger.py
archive/: process.py
docs/: DOCUMENTATION_INDEX.md  QUICKSTART.md  WEBHOOK_GUIDE.md  WEBHOOK_IMPLEMENTATION.md
docs/api/: API_REFERENCE_COMPLETE.md  CHANNEL_API_REFERENCE.md
docs/architecture/: ARCHITECTURE_README.md  ARCHITECTURE_SUMMARY.md  BACKEND_ARCHITECTURE.md  BACKEND_ARCHITECTURE_PART2.md  BACKEND_ARCHITECTURE_PART3.md  BACKEND_ARCHITECTURE_PART4.md  COMPARISON_EXISTING_VS_NEW.md  DESIGN_SYSTEM.md
docs/deployment/: FINAL_DEPLOYMENT_SUMMARY.md  STARTUP_GUIDE.md
docs/implementation/: BATCH_DOWNLOADS_IMPLEMENTATION.md  BATCH_DOWNLOADS_QUICKSTART.md  BUG_FIXES.md  CHANNEL_DOWNLOADS_IMPLEMENTATION.md  IMPLEMENTATION.md  IMPLEMENTATION_GUIDE.md
docs/prd/: task_assignments_20251106.md  (+1 more)
examples/: channel_downloads_example.py  multi_token_demo.py  webhook_example.py
static/: FRONTEND_README.md  index.html  manifest.json  mobile.html  playlist.html  service-worker.js
tests/: README.md  conftest.py  test_api.py  test_discover.py  test_health.py  test_integration.py  test_multi_token.py  test_security.py  test_status.py  test_webhook_service.py
(+52 files in other folders)
